add site map | add video on project | style change

--- a/cng/vesta-cng.html
+++ b/cng/vesta-cng.html
@@ -334,10 +334,8 @@
                                 </a>                        
                             </div>              
                         </div>                    
-                        <hr>                    
-                        <div class="footer__end">                        
-                            Copyright © 2022 Доработка LADA VESTA CNG (заводской метан). All rights reserved. Powered by @iamzhuravlevtimofey.                    
-                        </div>                    
+                        <hr>
+                        <a href="../sitemap.xml" class="site-map">SITE MAP</a>                                     
                         <noscript><div><img src="https://mc.yandex.ru/watch/87166816" style="position:absolute; left:-9999px;" alt="" /></div></noscript>                
                     </div>            
                 </div>        
