--- a/index.html
+++ b/index.html
@@ -67,31 +67,31 @@
 			</div>
 		</section>
 
-			<div class="container">
-				<h2 class="title services__title">Преимущества ГБО</h2>
-				<div class="section__content container--border-blue">
-					<p>Автомобиль, оснащенный газобаллонной системой выгодно отличается от дизельного или бензинового.
-					</p>
-					<p>Поскольку штатная топливная система сохраняется, машина может ездить на двух видах горючего:
-						бензине и газе. Это дает возможность увеличить пробег без дозаправки. Особенно актуальным этот
-						момент был, когда сеть газовых заправок по стране еще не была так развита. В наши дни количество
-						АГЗС неуклонно растет, и остаться с пустым газовым баллоном уже не страшно. </p>
+		<div class="container">
+			<h2 class="title services__title">Преимущества ГБО</h2>
+			<div class="section__content container--light-red-bg">
+				<p>Автомобиль, оснащенный газобаллонной системой выгодно отличается от дизельного или бензинового.
+				</p>
+				<p>Поскольку штатная топливная система сохраняется, машина может ездить на двух видах горючего:
+					бензине и газе. Это дает возможность увеличить пробег без дозаправки. Особенно актуальным этот
+					момент был, когда сеть газовых заправок по стране еще не была так развита. В наши дни количество
+					АГЗС неуклонно растет, и остаться с пустым газовым баллоном уже не страшно. </p>
 
-					<p>Современные комплекты газового оборудования на автомобиле оснащены надежными электронными блоками
-						управления (ЭБУ). Это добавляет надежности газовым системам, поскольку имеется режим
-						самодиагностики. Остаточный объем газа в баллоне также контролируется электроникой. Электроника
-						производит переключение одного вида топлива на другое без участия водителя, в тоже время и для
-						водителя доступно переключение вручную при помощи специальной кнопки, установленной в салоне
-						авто.</p>
-				</div>
+				<p>Современные комплекты газового оборудования на автомобиле оснащены надежными электронными блоками
+					управления (ЭБУ). Это добавляет надежности газовым системам, поскольку имеется режим
+					самодиагностики. Остаточный объем газа в баллоне также контролируется электроникой. Электроника
+					производит переключение одного вида топлива на другое без участия водителя, в тоже время и для
+					водителя доступно переключение вручную при помощи специальной кнопки, установленной в салоне
+					авто.</p>
 			</div>
+		</div>
 		</section>
 
 
 		<section class="section" id="brends">
 			<div class="container">
 				<h2 class="title services__title">Марки ГБО</h2>
-				<div class="section__content container--border-blue">
+				<div class="section__content container--light-red-bg">
 					<p>Мы работаем только с качественным оборудованием от именитых марок:
 					</p>
 					<ul class="list-img">
@@ -146,8 +146,8 @@
 
 		<section class="about section section--dark-grey section--white-text">
 			<div class="container">
-				<h2 class="title services__title">О нас</h2>
-				<div class="section__content container--border-blue">
+				<h2 class="title services__title">У нас</h2>
+				<div class="section__content">
 					<div class="benefits section__benefits">
 						<div class="benefits__item">
 
@@ -177,7 +177,7 @@
 		<section class="section" id="price">
 			<div class="container">
 				<h2 class="title services__title">Цены*</h2>
-				<div class="section__content container--border-blue">
+				<div class="section__content container--light-red-bg">
 					<table class="table-products">
 						<tr class="table-products__tr">
 							<th class="table-products__th">Количество цилиндров</th>
@@ -207,19 +207,22 @@
 		<section class="section">
 			<div class="container">
 				<h2 class="title services__title">Наш Youtube канал</h2>
-				<div class="section__content container--border-blue youtube-content">
-					<div class="youtube-content__item"><iframe class="iframe-youtube"
-							src="https://www.youtube.com/embed/QfvEcORh4pA" title="YouTube video player" frameborder="0"
-							allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-							allowfullscreen></iframe></div>
-					<div class="youtube-content__item"><iframe class="iframe-youtube"
-							src="https://www.youtube.com/embed/-yrXREABJdw" title="YouTube video player" frameborder="0"
-							allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-							allowfullscreen></iframe></div>
-					<div class="youtube-content__item"><iframe class="iframe-youtube"
-							src="https://www.youtube.com/embed/dz-F2_Rf2UY" title="YouTube video player" frameborder="0"
-							allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-							allowfullscreen></iframe></div>
+				<div class="section__content container--light-red-bg youtube-content">
+					<div class="youtube-content__item">
+						<video class="youtube-content__video" controls>
+							<source src="./assets/video/real-consumption.mp4" type="video/mp4">
+						</video>
+					</div>
+					<div class="youtube-content__item">
+						<video class="youtube-content__video" controls>
+							<source src="./assets/video/camry-install-gas.mp4" type="video/mp4">
+						</video>
+					</div>
+					<div class="youtube-content__item">
+						<video class="youtube-content__video" controls>
+							<source src="./assets/video/polo-rapod.mp4" type="video/mp4">
+						</video>
+					</div>
 				</div>
 			</div>
 		</section>
@@ -238,12 +241,13 @@
 					<a href="tel:+79920248888" class="footer__tel">+7 992 024-88-88</a>
 					<ul class="social-list">
 						<li class="social-list__item"><a href="" class="social-list__link"><img
-									src="assets/img/youtube-icon.png" alt=""></a></li>
+									src="assets/img/youtube-icon.png" alt="Иконка Youtube"></a></li>
 						<li class="social-list__item"><a href="" class="social-list__link"><img
-									src="assets/img/vk-icon.png" alt=""></a></li>
+									src="assets/img/vk-icon.png" alt="Иконка VK"></a></li>
 						<li class="social-list__item"><a href="" class="social-list__link"><img
-									src="assets/img/whats-icon.png" alt=""></a></li>
+									src="assets/img/whats-icon.png" alt="Иконка WhatsApp"></a></li>
 					</ul>
+					<a href="sitemap.xml" class="site-map">SITE MAP</a>
 				</div>
 			</div>
 		</div>
