--- a/pages/parktronics.html
+++ b/pages/parktronics.html
@@ -70,13 +70,14 @@
 		<section class="section">
 			<div class="container">
 				<h2 class="title services__title">Для чего нужны парктроники</h2>
-				<div class="section__content container--border-blue">
+				<div class="section__content container--light-red-bg">
 					<p>Парктроник – это ультразвуковой радар с датчиками приема и излучения сигнала, чьей задачей
 						является информирование о наличии препятствия перед автомобилем в невидимой для водителя зоне,
 						чаще всего заднего вида. Фактически – это дополнительные «глаза» автомобилиста, уберегающие от
 						возможных столкновений с различными предметами и припаркованным транспортом.</p>
 
-						<div class="section__img-div"><img src="../assets/img/parktronik_chto_eto.jpg" class="section__img" alt="парктроники"></div>
+					<div class="section__img-div"><img src="../assets/img/parktronik_chto_eto.jpg" class="section__img"
+							alt="парктроники"></div>
 					<p>Существует несколько причин чтобы задуматься над вопросом установки парктроников:
 					<ol>
 						<li>Быстрая и безаварийная парковка автомобиля даже при минимуме свободного места, например, в
@@ -92,17 +93,22 @@
 		<section class="section" id="type">
 			<div class="container">
 				<h2 class="title services__title">Виды парктроников</h2>
-				<div class="section__content container--border-blue">
+				<div class="section__content container--light-red-bg">
 					<p>Парковочные радары комплектуются 2-мя, 4-мя, 6-ю или 8 датчиками. Чем их меньше, тем больше в
-						парктронике «слепых» зон. Устройство с 2-мя сенсорами упростит парковку, но может пропустить такие
-						тонкие препятствия, как столбики. Оборудование с 4-мя локаторами станет оптимальным для установки на
+						парктронике «слепых» зон. Устройство с 2-мя сенсорами упростит парковку, но может пропустить
+						такие
+						тонкие препятствия, как столбики. Оборудование с 4-мя локаторами станет оптимальным для
+						установки на
 						задние бампера. Оно обеспечит хорошую зону видимости и «поймает» даже самые узкие объекты.
 						Парктроники на шесть и восемь локаторов, расположенных по обеим сторонам машины, дадут максимум
-						информации о ситуации спереди и сзади. Они будут удобны в использовании на авто с удлиненным капотом
+						информации о ситуации спереди и сзади. Они будут удобны в использовании на авто с удлиненным
+						капотом
 						и значительно упростят процесс параллельной парковки.
 					</p>
-					<div class="section__img-div"><img src="../assets/img/partroniki-aaaline.jpg" class="section__img" alt="парктроники"></div>
-					<p>Минимальное расстояние обнаружения препятствий у разных видов парктроников варьируется от 10 до 30
+					<div class="section__img-div"><img src="../assets/img/partroniki-aaaline.jpg" class="section__img"
+							alt="парктроники"></div>
+					<p>Минимальное расстояние обнаружения препятствий у разных видов парктроников варьируется от 10 до
+						30
 						см, максимальное – от 1,5 до 2,5 м. Для опытных водителей вполне достаточно будет приборов,
 						улавливающих «помехи» на удалении до 1,5-1,8 метров. Начинающим автовладельцам лучше приобретать
 						устройства с максимальной чувствительностью – 2,5 метра.</p>
@@ -113,15 +119,14 @@
 
 		<section class="section section--dark-grey section--white-text">
 			<div class="container">
-				<h2 class="title services__title">О нас</h2>
-				<div class="section__content container--border-blue">
+				<h2 class="title services__title">У нас</h2>
+				<div class="section__content">
 					<div class="benefits section__benefits">
 						<div class="benefits__item">
 
 							<p class="benefits__title"><img src="../assets/icons/bag.svg" alt="" class="benefits__img">
 								Опыт</p>
-							<p class="benefits__text">Более 8 лет мы трудимся для того, чтобы заправка автомобиля была
-								для вас более экономичной</p>
+							<p class="benefits__text">Более 8 лет мы трудимся для того, чтобы сделать ваш автобомиль лучше</p>
 						</div>
 						<div class="benefits__item">
 
@@ -144,7 +149,7 @@
 		<section class="section" id="price">
 			<div class="container">
 				<h2 class="title services__title">Цены*</h2>
-				<div class="section__content container--border-blue">
+				<div class="section__content container--light-red-bg">
 					<table class="table-products">
 						<tr class="table-products__tr">
 							<th class="table-products__th">Фото</th>
@@ -152,32 +157,43 @@
 							<th class="table-products__th">Стоимость с установкой</th>
 						</tr>
 						<tr class="table-products__tr">
-							<td class="table-products__td"><img class="table-products__img" src="../assets/partronics-img/led-14-display-1-400x400.jpg" alt="Парктроники AAAline lcd-14"></td>
+							<td class="table-products__td"><img class="table-products__img"
+									src="../assets/partronics-img/led-14-display-1-400x400.jpg"
+									alt="Парктроники AAAline lcd-14"></td>
 							<td class="table-products__td">Парктроник AAALine LED-14</td>
 							<td class="table-products__td">11000₽</td>
 						</tr>
 						<tr class="table-products__tr">
-							<td class="table-products__td"><img class="table-products__img" src="../assets/partronics-img/led-14-display-1-400x400.jpg" alt="Парктроники AAAline lcd-14"></td>
+							<td class="table-products__td"><img class="table-products__img"
+									src="../assets/partronics-img/led-14-display-1-400x400.jpg"
+									alt="Парктроники AAAline lcd-14"></td>
 							<td class="table-products__td">Парктроник AAALine LED-14F (передний)</td>
 							<td class="table-products__td">11500₽</td>
 						</tr>
 						<tr class="table-products__tr">
-							<td class="table-products__td"><img class="table-products__img" src="../assets/partronics-img/lcd-14-display-800x800.jpg" alt="Парктроники AAAline lcd-14"></td>
+							<td class="table-products__td"><img class="table-products__img"
+									src="../assets/partronics-img/lcd-14-display-800x800.jpg"
+									alt="Парктроники AAAline lcd-14"></td>
 							<td class="table-products__td">Парктроник AAALine LСD-14</td>
 							<td class="table-products__td">13500₽</td>
 						</tr>
 						<tr class="table-products__tr">
-							<td class="table-products__td"><img class="table-products__img" src="../assets/partronics-img/lcd-14-display-800x800.jpg" alt="Парктроники AAAline lcd-14"></td>
+							<td class="table-products__td"><img class="table-products__img"
+									src="../assets/partronics-img/lcd-14-display-800x800.jpg"
+									alt="Парктроники AAAline lcd-14"></td>
 							<td class="table-products__td">Парктроник AAALine LСD-14F (передний)</td>
 							<td class="table-products__td">14500₽</td>
 						</tr>
 						<tr class="table-products__tr">
-							<td class="table-products__td"><img class="table-products__img" src="../assets/partronics-img/lcd-18-display-1-800x800.jpg" alt="Парктроники AAAline lcd-14"></td>
+							<td class="table-products__td"><img class="table-products__img"
+									src="../assets/partronics-img/lcd-18-display-1-800x800.jpg"
+									alt="Парктроники AAAline lcd-14"></td>
 							<td class="table-products__td">Парктроник AAALine LСD-16</td>
 							<td class="table-products__td">20500₽</td>
 						</tr>
 					</table>
-					<p class="table-products__post-scriptum">* Цены являются ориентировочными, точную цену спрашивайте по телефону</p>
+					<p class="table-products__post-scriptum">* Цены являются ориентировочными, точную цену спрашивайте
+						по телефону</p>
 				</div>
 			</div>
 		</section>
@@ -185,24 +201,27 @@
 		<section class="section">
 			<div class="container">
 				<h2 class="title services__title">Наш Youtube канал</h2>
-				<div class="section__content container--border-blue youtube-content">
-					<div class="youtube-content__item"><iframe class="iframe-youtube"
-							src="https://www.youtube.com/embed/QfvEcORh4pA" title="YouTube video player" frameborder="0"
-							allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-							allowfullscreen></iframe></div>
-					<div class="youtube-content__item"><iframe class="iframe-youtube"
-							src="https://www.youtube.com/embed/-yrXREABJdw" title="YouTube video player" frameborder="0"
-							allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-							allowfullscreen></iframe></div>
-					<div class="youtube-content__item"><iframe class="iframe-youtube"
-							src="https://www.youtube.com/embed/dz-F2_Rf2UY" title="YouTube video player" frameborder="0"
-							allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-							allowfullscreen></iframe></div>
+				<div class="section__content container--light-red-bg youtube-content">
+					<div class="youtube-content__item">
+						<video class="youtube-content__video" controls>
+							<source src="../assets/video/real-consumption.mp4" type="video/mp4">
+						</video>
+					</div>
+					<div class="youtube-content__item">
+						<video class="youtube-content__video" controls>
+							<source src="../assets/video/camry-install-gas.mp4" type="video/mp4">
+						</video>
+					</div>
+					<div class="youtube-content__item">
+						<video class="youtube-content__video" controls>
+							<source src="../assets/video/polo-rapod.mp4" type="video/mp4">
+						</video>
+					</div>
 				</div>
 			</div>
 		</section>
 	</main>
-	<footer class="footer" id="contact">
+	<footer class="footer section section--dark-grey section--white-text" id="contact">
 		<div class="container">
 			<h2>Контакты</h2>
 			<div class="flex-menu footer__flex-menu">
@@ -222,6 +241,7 @@
 						<li class="social-list__item"><a href="" class="social-list__link"><img
 									src="../assets/img/whats-icon.png" alt=""></a></li>
 					</ul>
+					<a href="../sitemap.xml" class="site-map">SITE MAP</a>
 				</div>
 			</div>
 		</div>
